@@ -7,7 +7,7 @@
 ;; Git-Repository: git://github.com/Somelauw/evil-org-mode.git
 ;; Created: 2012-06-14
 ;; Forked-since: 2017-02-12
-;; Version: 0.9.5
+;; Version: 0.9.6
 ;; Package-Requires: ((emacs "24.4") (evil "1.0") (org "8.0.0"))
 ;; Keywords: evil vim-emulation org-mode key-bindings presets
 
@@ -257,7 +257,7 @@ Passing in any prefix argument, executes the command without special behavior."
          (e (org-element-lineage (org-element-at-point) elements t)))
     (cl-case (org-element-type e)
       ((table-row) (org-table-insert-row '(4)) (evil-insert nil))
-      ((item) (org-insert-item) (evil-insert nil))
+      ((item) (org-insert-item (org-at-item-checkbox-p)) (evil-insert nil))
       (otherwise (evil-open-below count)))))
 
 (defun evil-org-open-above (count)
@@ -273,7 +273,10 @@ Passing in any prefix argument, executes the command without special behavior."
          (e (org-element-lineage (org-element-at-point) elements t)))
     (cl-case (org-element-type e)
       ((table-row) (org-table-insert-row) (evil-insert nil))
-      ((item) (beginning-of-line) (org-insert-item) (evil-insert nil))
+      ((item)
+       (beginning-of-line)
+       (org-insert-item (org-at-item-checkbox-p))
+       (evil-insert nil))
       (otherwise (evil-open-above count)))))
 
 (defmacro evil-org-define-eol-command (cmd)
